# maestria-lite

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: maestria.yaml  prometheus.yml
config/contracts/: analyzer-orm-v1.json  lis-primary-oru-v1.json
docs/: CONTRIBUTING.md
maestria/: __init__.py  cli.py
maestria/core/: __init__.py  engine.py  event_bus.py  pipeline.py  router.py
maestria/interfaces/: __init__.py  contract.py  hl7_parser.py
maestria/monitoring/: __init__.py  audit.py  health.py  metrics.py
maestria/patches/: __init__.py  manager.py
maestria/security/: __init__.py  compliance.py  cve_tracker.py  remediation.py  sbom.py
maestria/utils/: __init__.py  config.py  crypto.py
tests/: test_maestria.py
